Use `String.formatted` instead of `String.format`