@@ -40,8 +40,7 @@ import org.junit.platform.engine.support.discovery.DiscoveryIssueReporter;
 @API(status = INTERNAL, since = "5.0")
 public class IsTestFactoryMethod extends IsTestableMethod {
 
-	private static final String EXPECTED_RETURN_TYPE_MESSAGE = String.format(
-		"must return a single %1$s or a Stream, Collection, Iterable, Iterator, Iterator provider, or array of %1$s",
+	private static final String EXPECTED_RETURN_TYPE_MESSAGE = "must return a single %1$s or a Stream, Collection, Iterable, Iterator, Iterator provider, or array of %1$s".formatted(
 		DynamicNode.class.getName());
 
 	public IsTestFactoryMethod(DiscoveryIssueReporter issueReporter) {
