@@ -29,7 +29,7 @@ class NullArgumentsProvider implements ArgumentsProvider {
 	@Override
 	public Stream<? extends Arguments> provideArguments(ParameterDeclarations parameters, ExtensionContext context) {
 		Preconditions.condition(parameters.getFirst().isPresent(),
-			() -> String.format("@NullSource cannot provide a null argument to %s: no formal parameters declared.",
+			() -> "@NullSource cannot provide a null argument to %s: no formal parameters declared.".formatted(
 				parameters.getSourceElementDescription()));
 
 		return Stream.of(nullArguments);
