@@ -75,7 +75,7 @@ class DiscoverySelectorIdentifierParsers {
 			for (DiscoverySelectorIdentifierParser parser : loadedParsers) {
 				DiscoverySelectorIdentifierParser previous = parsersByPrefix.put(parser.getPrefix(), parser);
 				Preconditions.condition(previous == null,
-					() -> String.format("Duplicate parser for prefix: [%s]; candidate a: [%s]; candidate b: [%s]",
+					() -> "Duplicate parser for prefix: [%s]; candidate a: [%s]; candidate b: [%s]".formatted(
 						parser.getPrefix(), requireNonNull(previous).getClass().getName(),
 						parser.getClass().getName()));
 			}
