@@ -74,7 +74,7 @@ class DisabledOnOsConditionTests extends AbstractExecutionConditionTests {
 	void disabledOnEveryOs() {
 		evaluateCondition();
 		assertDisabled();
-		assertReasonContains(String.format("Disabled on operating system: %s ==> Disabled on every OS", OS_NAME));
+		assertReasonContains("Disabled on operating system: %s ==> Disabled on every OS".formatted(OS_NAME));
 	}
 
 	/**
@@ -234,33 +234,33 @@ class DisabledOnOsConditionTests extends AbstractExecutionConditionTests {
 	private void assertDisabledOnCurrentOsIf(boolean condition) {
 		if (condition) {
 			assertDisabled();
-			assertReasonContains(String.format("Disabled on operating system: %s", OS_NAME));
+			assertReasonContains("Disabled on operating system: %s".formatted(OS_NAME));
 		}
 		else {
 			assertEnabled();
-			assertReasonContains(String.format("Enabled on operating system: %s", OS_NAME));
+			assertReasonContains("Enabled on operating system: %s".formatted(OS_NAME));
 		}
 	}
 
 	private void assertDisabledOnCurrentArchitectureIf(boolean condition) {
 		if (condition) {
 			assertDisabled();
-			assertReasonContains(String.format("Disabled on architecture: %s", ARCH));
+			assertReasonContains("Disabled on architecture: %s".formatted(ARCH));
 		}
 		else {
 			assertEnabled();
-			assertReasonContains(String.format("Enabled on architecture: %s", ARCH));
+			assertReasonContains("Enabled on architecture: %s".formatted(ARCH));
 		}
 	}
 
 	private void assertDisabledOnCurrentOsAndArchitectureIf(boolean condition) {
 		if (condition) {
 			assertDisabled();
-			assertReasonContains(String.format("Disabled on operating system: %s (%s)", OS_NAME, ARCH));
+			assertReasonContains("Disabled on operating system: %s (%s)".formatted(OS_NAME, ARCH));
 		}
 		else {
 			assertEnabled();
-			assertReasonContains(String.format("Enabled on operating system: %s (%s)", OS_NAME, ARCH));
+			assertReasonContains("Enabled on operating system: %s (%s)".formatted(OS_NAME, ARCH));
 		}
 	}
 
