@@ -61,8 +61,7 @@ class AutoCloseTests extends AbstractJupiterTestEngineTests {
 	@Test
 	void blankCloseMethodName() {
 		Class<?> testClass = BlankCloseMethodNameTestCase.class;
-		String msg = String.format("@AutoClose on field %s.field must specify a method name.",
-			testClass.getCanonicalName());
+		String msg = "@AutoClose on field %s.field must specify a method name.".formatted(testClass.getCanonicalName());
 		Events tests = executeTestsForClass(testClass).testEvents();
 		assertFailingWithMessage(tests, msg);
 	}
@@ -70,8 +69,7 @@ class AutoCloseTests extends AbstractJupiterTestEngineTests {
 	@Test
 	void primitiveTypeCannotBeClosed() {
 		Class<?> testClass = PrimitiveFieldTestCase.class;
-		String msg = String.format("@AutoClose is not supported on primitive field %s.x.",
-			testClass.getCanonicalName());
+		String msg = "@AutoClose is not supported on primitive field %s.x.".formatted(testClass.getCanonicalName());
 		Events tests = executeTestsForClass(testClass).testEvents();
 		assertFailingWithMessage(tests, msg);
 	}
@@ -79,7 +77,7 @@ class AutoCloseTests extends AbstractJupiterTestEngineTests {
 	@Test
 	void arrayCannotBeClosed() {
 		Class<?> testClass = ArrayFieldTestCase.class;
-		String msg = String.format("@AutoClose is not supported on array field %s.x.", testClass.getCanonicalName());
+		String msg = "@AutoClose is not supported on array field %s.x.".formatted(testClass.getCanonicalName());
 		Events tests = executeTestsForClass(testClass).testEvents();
 		assertFailingWithMessage(tests, msg);
 	}
@@ -87,8 +85,7 @@ class AutoCloseTests extends AbstractJupiterTestEngineTests {
 	@Test
 	void nullCannotBeClosed(@TrackLogRecords LogRecordListener listener) {
 		Class<?> testClass = NullCloseableFieldTestCase.class;
-		String msg = String.format("Cannot @AutoClose field %s.field because it is null.",
-			testClass.getCanonicalName());
+		String msg = "Cannot @AutoClose field %s.field because it is null.".formatted(testClass.getCanonicalName());
 		Events tests = executeTestsForClass(testClass).testEvents();
 		tests.assertStatistics(stats -> stats.succeeded(1).failed(0));
 		assertThat(listener.stream(Level.WARNING)).map(LogRecord::getMessage).anyMatch(msg::equals);
@@ -394,7 +391,7 @@ class AutoCloseTests extends AbstractJupiterTestEngineTests {
 	}
 
 	private void assertMissingCloseMethod(Class<?> testClass, String methodName) {
-		String msg = String.format("Cannot @AutoClose field %s.field because %s does not define method %s().",
+		String msg = "Cannot @AutoClose field %s.field because %s does not define method %s().".formatted(
 			testClass.getCanonicalName(), String.class.getName(), methodName);
 		Events tests = executeTestsForClass(testClass).testEvents();
 		assertFailingWithMessage(tests, msg);
